@@ -12,8 +12,7 @@ use Getopt::Long;
 sub report {
     my ( $pkg, $db, $options ) = @_;
 
-    my $report = Devel::Cover::Report::Clover::Builder->new(
-        { db => $db, name => $options->{option}{projectname} } );
+    my $report = builder( $db, $options );
     my $xml_string = $report->generate( output_file($options) );
 
     printf( "Writing clover output file to '%s'...\n", output_file($options) )
@@ -46,6 +45,17 @@ sub output_file {
     my $out_file = $options->{option}{outputfile};
     my $out_path = sprintf( '%s/%s', $out_dir, $out_file );
     return $out_path;
+}
+
+sub builder {
+    my ( $db, $options ) = @_;
+    my $project_name = $options->{option}{projectname};
+    my $report       = Devel::Cover::Report::Clover::Builder->new(
+        {   db                         => $db,
+            name                       => $project_name,
+            include_condition_criteria => 1
+        }
+    );
 }
 
 1;
