@@ -3,10 +3,16 @@
 use Test::Exception;
 use Test::More;
 
+use FindBin;
+use lib ($FindBin::Bin);
+use testcover;
+
 use Devel::Cover::Report::Clover;
 use Devel::Cover::Report::Clover::Reportable;
 
 my $reportable = Devel::Cover::Report::Clover::Reportable->new();
+
+my $DB = testcover::run('multi_file');
 
 my @test = (
     sub {
@@ -24,6 +30,34 @@ my @test = (
 
         is( $got, $expect, $t );
 
+    },
+    sub {
+        my $t = "builder - name comes from correct option";
+
+        my $expect = 'test';
+        my $o      = { 'option' => { 'projectname' => $expect } };
+        my $got    = Devel::Cover::Report::Clover::builder( $DB, $o )->name;
+
+        is( $got, $expect, $t );
+    },
+    sub {
+        my $t = "builder - db param comes from first param correctly";
+
+        my $expect = $DB;
+        my $o      = {};
+        my $got    = Devel::Cover::Report::Clover::builder( $expect, $o )->db;
+
+        is( $got, $expect, $t );
+    },
+    sub {
+        my $t = "builder - include_condition_criteria is on by default";
+
+        my $expect = 1;
+        my $o      = {};
+        my $b      = Devel::Cover::Report::Clover::builder( $DB, {} );
+        my $got    = $b->include_condition_criteria;
+
+        is( $got, $expect, $t );
     },
     sub {
         my $t = "reportable->report - dies";
