@@ -1,6 +1,7 @@
 Devel::Cover::Report::Clover.pm history
 
 Release 0.30 - 18th October 2011
+ - BUG: branch+condition needs to be the default
  - BUG: make sure to pass project name from the command line
  - BUG: element (and covered element) totals were wrong and sometimes
    even zero
